Bug 25516 (League Documents page Item too long) fixed

--- a/RDN.League/Content/main.css
+++ b/RDN.League/Content/main.css
@@ -755,7 +755,7 @@ div.FixedHeader_Cloned table {
 ol.tree
 {
 	padding: 0 0 0 30px;
-	width: 300px;
+	width: 100%;
 }
 	ol.tree li 
 	{ 
@@ -794,7 +794,7 @@ ol.tree
 		ol.tree li input + ol
 		{
 			background: url(images/toggle-small-expand.png) 0 0 no-repeat;
-			margin: -1.55em 0 0 0; /* 15px */
+			margin: -1.7em 0 0 0; /* 15px */
 			height: 1.5em;
 		}
 		ol.tree li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
@@ -816,7 +816,7 @@ ol.tree
 	ol.tree li input:checked + ol
 	{
 		background: url(images/toggle-small.png) 0px 0px no-repeat;
-		margin: -1.55em 0 0 0; /* 20px */
+		margin: -1.7em 0 0 0; /* 20px */
 		padding: 1.563em 0 0 35px;
 		height: auto;
 	}
